from SPA to PWA by WebEssentials.AspNetCore.ServiceWorker

--- a/jQuerySpa/jQuerySpa.csproj
+++ b/jQuerySpa/jQuerySpa.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.App" />
+    <PackageReference Include="WebEssentials.AspNetCore.PWA" Version="1.0.33" />
   </ItemGroup>
 
   <ItemGroup>
