--- a/jQuerySpa/wwwroot/manifest.json
+++ b/jQuerySpa/wwwroot/manifest.json
@@ -1,14 +1,16 @@
 ﻿{
-  "name": "Awesome Application",
-  "short_name": "Awesome",
-  "description": "The most awesome application in the world",
+  "name": "jQuery PWA",
+  "short_name": "jQPWA",
+  "description": "jQuery SPA turned into PWA",
+  "theme_color": "#000000",
+  "background_color": "#eeeeee",
   "icons": [
     {
-      "src": "/images/icon192x192.png",
+      "src": "/images/192x192.png",
       "sizes": "192x192"
     },
     {
-      "src": "/images/icon512x512.png",
+      "src": "/images/512x512.png",
       "sizes": "512x512"
     }
   ],
